##Text encoding: utf-8

2008-11-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* mozilla-plugin/chem-viewer.cc: convert filename to uri when needed.

2008-11-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: do not request gnome builds for goffice >= 0.7.3.
	* libs/gccv/item.h: added a macro for properties changing the size
	or position.
	* libs/gccv/rectangle.cc: added Rectangle::GetPosition.
	* libs/gccv/rectangle.h: ditto.
	* libs/gccv/text.cc: updates the rectangle.
	* libs/gccv/text.h: ditto.
	* libs/gcu/spectrumdoc.cc: correctly load negative values in
	(XY..XY) tables. [#24720]
	* plugins/paint/atoms/elementtool.cc: reimplementation of the OnClicked
	method to work with the new canvas.

2008-10-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* all: moved libs/canvas to libs/gccv and rename libgchempaint to libgcp
	for more consistency.

2008-10-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cml/Makefile.am: new cml loader.
	* plugins/loaders/cml/cml.cc: ditto.
	* plugins/loaders/cml/plugin.xml.in: ditto.

2008-10-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post branching version bump (0.11.0).
	* others: start implementing the new canvas and make things compile
	without libgnomecanvas.

2008-10-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: changed version to 0.10.0 for release.
	* libs/gcp/fragment-atom.h: fixed API documentation.
	* libs/gcp/text.h: ditto.
	* libs/gcp/view.h: add missing API documentation.

2008-10-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/gchemtable-app.cc: implement save as image for curves.
	* programs/table/gchemtable-app.h: ditto.
	* programs/table/gchemtable-curve.cc: ditto.
	* programs/table/gchemtable-curve.h: ditto.

2008-10-25  Jordan Mantha  <laserjock@ubuntu.com>
        * docs/help/spectra/C/gspectrum.xml: miscellaneous typo and style fixes.
          Also changed mixed DOS/Unix line endings to Unix.
